SDKs/googleapis.com/androidpublisher/v1/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.AndroidpublisherPurchasesCancelRequest(
    security=operations.AndroidpublisherPurchasesCancelSecurity(
        oauth2=shared.SchemeOauth2(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        )
        oauth2c=shared.SchemeOauth2c(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        ),
    ),
    path_params=operations.AndroidpublisherPurchasesCancelPathParams(
        package_name="a",
        subscription_id="sint",
        token="velit",
    ),
    query_params=operations.AndroidpublisherPurchasesCancelQueryParams(
        alt="json",
        fields="incidunt",
        key="reiciendis",
        oauth_token="velit",
        pretty_print=True,
        quota_user="in",
        user_ip="quas",
    ),
)
    
res = s.purchases.androidpublisher_purchases_cancel(req)

if res.status_code == 200:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### purchases

* `androidpublisher_purchases_cancel` - Cancels a user's subscription purchase. The subscription remains valid until its expiration time.
* `androidpublisher_purchases_get` - Checks whether a user's subscription purchase is valid and returns its expiry time.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
