SDKs/googleapis.com/androidpublisher/v1.1/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.AndroidpublisherInapppurchasesGetRequest(
    security=operations.AndroidpublisherInapppurchasesGetSecurity(
        oauth2=shared.SchemeOauth2(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        )
        oauth2c=shared.SchemeOauth2c(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        ),
    ),
    path_params=operations.AndroidpublisherInapppurchasesGetPathParams(
        package_name="omnis",
        product_id="enim",
        token="aspernatur",
    ),
    query_params=operations.AndroidpublisherInapppurchasesGetQueryParams(
        alt="json",
        fields="blanditiis",
        key="perferendis",
        oauth_token="voluptas",
        pretty_print=True,
        quota_user="facilis",
        user_ip="explicabo",
    ),
)
    
res = s.inapppurchases.androidpublisher_inapppurchases_get(req)

if res.body is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### inapppurchases

* `androidpublisher_inapppurchases_get` - Checks the purchase and consumption status of an inapp item.

### purchases

* `androidpublisher_purchases_cancel` - Cancels a user's subscription purchase. The subscription remains valid until its expiration time.
* `androidpublisher_purchases_get` - Checks whether a user's subscription purchase is valid and returns its expiry time.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
